@@ -14,6 +14,10 @@ Version 4.6  [ (under development) ]
             - All constructors for skeletal objects are now private, since
               only the triangulation skeletal routines should be creating them.
             - Cleaned up some of the more obtuse parts of the documentation.
+        Class NCensus:
+            - Removed findAllCompletions(), which (as the documentation
+              points out) is an empty shell of a routine that has never been
+              implemented and quite possibly never will.
         Class NEdge:
             - Added new static arrays NEdge::edgeNumber and NEdge::edgeVertex
               to replace the old global arrays regina::edgeNumber,
@@ -51,6 +55,10 @@ Version 4.6  [ (under development) ]
             - Deprecated the setPerm() routines; these are unnecessary
               because NPerm objects are very small and can just be copied
               around using the assignment operator.
+        Class NPillowTwoSphere, NSnappedTwoSphere:
+            - Removed reduceTriangulation() and getReducedTriangulation(),
+              both of which are empty shells of routines that have never
+              been implemented and quite possibly never will.
         Class NTetrahedron:
             - Renamed getAdjacentTetrahedron(), getAdjacentTetrahedronGluing()
               and getAdjacentFace() to adjacentTetrahedron(), adjacentGluing()
